Fixed broken mmu_allocate_physical(): * Now it checks whether the given physical range exists at all. * Not only check whether any range of the given size is free, but also check   whether the given range is free. * B_BAD_VALUE is not a particularly good return value for a function supposed   to return a bool

Fixes #5911. With only 64 MB RAM the usual debug syslog buffer location may
be outside the actually existing physical memory.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36632 a95241bf-73f2-0310-859d-f6bbb57e9c96